tests/specs/npm/dynamic_import_invalid_package_name/dynamic_import_invalid_package_name/main.out
Download http://localhost:4260/ws%3A
FAILED
TypeError: npm package 'ws:' does not exist.
    at async file:///[WILDCARD]/dynamic_import_invalid_package_name/main.ts:2:3 {
  code: "ERR_MODULE_NOT_FOUND"
}
