tests/specs/npm/dynamic_import_invalid_package_name/dynamic_import_invalid_package_name/main.ts
try {
  await import(`npm:${"ws:"}`);
} catch (err) {
  console.log("FAILED");
  console.log(err);
}
